--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  # The Database
+  # 1. Database
   postgres:
     image: postgres:16-alpine
     container_name: hyper_postgres
@@ -15,13 +15,38 @@ services:
       - postgres_data:/var/lib/postgresql/data
     restart: always
 
-  # The Rate Limiter
+  # 2. Redis Cache
   redis:
     image: redis:7-alpine
     container_name: hyper_redis
     ports:
       - "6379:6379"
     restart: always
+
+  # 3. GO APP (The Cluster)
+  app:
+    build: .
+    # We remove 'container_name' so Docker can generate names for replicas (app-1, app-2...)
+    environment:
+      # Use service names, NOT localhost!
+      DB_URL: postgres://user:password@postgres:5432/hypercheckout?sslmode=disable
+      REDIS_URL: redis:6379
+      PORT: 8080
+    depends_on:
+      - postgres
+      - redis
+    restart: always
+
+  # 4. Nginx Load Balancer
+  nginx:
+    image: nginx:alpine
+    container_name: hyper_nginx
+    ports:
+      - "80:80" # Maps your laptop's Port 80 to Nginx
+    volumes:
+      - ./deploy/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
 
 volumes:
   postgres_data:
